<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_collabo"
        android:icon="@drawable/ic_collabo_black_24dp"
        android:title="@string/title_collabo" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:title=""
        app:showAsAction="never"
        android:enabled="false"/>

    <item
        android:id="@+id/navigation_bag"
        android:icon="@drawable/ic_bag_black_24dp"
        android:title="@string/title_bag" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_user_black_24dp"
        android:title="@string/title_mypage" />

</menu>