<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/border_bottom">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_review_insert_back_ic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_arrow_back_green_24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/infoReviewInsert01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/info_review_insert_back_ic"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:text="@string/infoReviewInsert02"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:paddingVertical="20dp">

        <ImageButton
            android:id="@+id/info_review_star_ic_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_star_40dp"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/info_review_star_ic_02"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/infoReviewInsert03"/>

        <ImageButton
            android:id="@+id/info_review_star_ic_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_star_40dp"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toRightOf="@+id/info_review_star_ic_01"
            app:layout_constraintRight_toLeftOf="@+id/info_review_star_ic_03"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/infoReviewInsert04"/>

        <ImageButton
            android:id="@+id/info_review_star_ic_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_star_40dp"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toRightOf="@+id/info_review_star_ic_02"
            app:layout_constraintRight_toLeftOf="@+id/info_review_star_ic_04"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/infoReviewInsert05"/>

        <ImageButton
            android:id="@+id/info_review_star_ic_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_star_40dp"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toRightOf="@+id/info_review_star_ic_03"
            app:layout_constraintRight_toLeftOf="@+id/info_review_star_ic_05"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/infoReviewInsert06"/>

        <ImageButton
            android:id="@+id/info_review_star_ic_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_star_40dp"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toRightOf="@+id/info_review_star_ic_04"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/infoReviewInsert07"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoReviewInsert08"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/gray04"
        android:layout_marginStart="10dp"
        android:layout_marginVertical="10dp"/>

    <EditText
        android:id="@+id/info_review_insert_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/round_gray_10dp"
        android:gravity="top"
        android:textSize="13sp"
        android:textColor="@color/gray05"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:maxLength="500"
        android:hint="@string/infoReviewInsert09"
        android:autofillHints="no"
        android:lineSpacingExtra="3dp"
        android:scrollbars="vertical"
        android:inputType="text"/>

    <TextView
        android:id="@+id/info_review_insert_photo_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoReviewInsert10"
        android:textStyle="bold"
        android:textColor="@color/gray04"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/info_review_insert_photo_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/info_review_insert_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/infoReviewInsert11"
            android:textSize="14sp"
            android:background="@color/green03"/>

    </LinearLayout>

</LinearLayout>