<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/border_bottom">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mypage_edit_password_back_ic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_arrow_back_green_24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/mypageEditPassword01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/mypage_edit_password_back_ic"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:text="@string/mypageEditPassword02"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mypage_edit_password_layout"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:gravity="center_vertical"
        android:paddingVertical="5dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/mypage_edit_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/round_gray_30dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"
            android:textStyle="bold"
            android:hint="@string/mypageEditPassword03"
            android:maxLength="20"
            android:autofillHints="no"/>

        <TextView
            android:id="@+id/mypage_edit_old_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/mypageEditPassword04"
            android:textColor="@color/red05"
            android:textSize="11sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/mypage_edit_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/round_gray_30dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"
            android:textStyle="bold"
            android:hint="@string/mypageEditPassword05"
            android:maxLength="20"
            android:autofillHints="no"/>

        <TextView
            android:id="@+id/mypage_edit_new_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/mypageEditPassword06"
            android:textColor="#5E5E5E"
            android:textSize="11sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>

        <Button
            android:id="@+id/mypage_edit_password_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/round_gray_30dp"
            android:text="@string/mypageEditPassword07"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:enabled="false"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:id="@+id/mypage_edit_password_lost_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/mypageEditPassword08"
            android:textSize="12sp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/border_bottom"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>