<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardCornerRadius="1000dp">

            <ImageButton
                android:id="@+id/info_review_comment_user_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/temp_image"
                android:padding="0dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/rvInfoReviewComment01"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/info_review_comment_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rvInfoReviewComment02"
            android:textColor="@color/gray05"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/info_review_comment_regdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rvInfoReviewComment03"
            android:textSize="11sp"
            android:textColor="@color/gray03"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <TextView
        android:id="@+id/info_review_comment_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rvInfoReviewComment04"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:lineSpacingExtra="3dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:background="@drawable/round_gray_30dp"/>

</LinearLayout>